--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rental-motor-app</title>
+    <meta name="description" content="Sewa motor modern dengan harga terjangkau. Proses booking mudah, motor terawat, dan layanan 24/7. Pilihan terbaik untuk perjalanan Anda." />
+    <meta name="keywords" content="sewa motor, rental motor, motor bali, sewa motor murah, rental motor online" />
+    <meta name="author" content="MotorRent" />
+    <meta property="og:title" content="MotorRent - Sewa Motor Modern Terbaik di Indonesia" />
+    <meta property="og:description" content="Sewa motor modern dengan harga terjangkau. Proses booking mudah, motor terawat, dan layanan 24/7." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://motorrent.com" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <meta name="theme-color" content="#2563eb" />
+    <title>MotorRent - Sewa Motor Modern Terbaik di Indonesia</title>
   </head>
   <body>
     <div id="root"></div>
